--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://example.com/"
 languageCode = "en-US"
-title = "Chris Turner"
+title = "Dr Niraj Modi"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
@@ -11,9 +11,9 @@ theme = "hugo-sustain"
   post = "/:year/:month/:day/:slug"
 
 [params]
-  avatar = "profile.png"
-  author = "Chris Turner"
-  description = "Describe your website"
+  avatar = "profile.jpg"
+  author = "Dr Niraj Modi"
+  description = "Senior Business Associate"
 
   # Custom assets can be linked with their paths relative to static/
   custom_css = []
